--- a/src/components/controlls/controls.css
+++ b/src/components/controlls/controls.css
@@ -2,7 +2,6 @@
 
 .algorithmSelect{
     width: 20rem;
-    height: 20rem;
     grid-column-start: 2;
     grid-column-end: 3;
 }
